fix:change contrast

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,80 @@
+*{
+  --orange-light:#FFCB89;
+  --orange:#ff5110;
+  --contrast-bg:black;
+  --contrast-color:white;
+}
 
   .card {
     float: right;
   }
 
+  #accessibility-icon{
+    width: 40px;
+    fill: #003375;
+  }
 
   /* High Contrast */
 .high-contrast {
-  background-color: black;
-  color: white;
+  background-color: var(--contrast-bg);
+  color: var(--contrast-color);
+}
+
+.high-contrast #accessibility-icon{
+  fill: var(--orange) ;
+}
+
+.high-contrast input[type="radio"] {
+ color: var(--contrast-bg);
+ background-color: var(--contrast-color);
 }
 
 .high-contrast button {
-  background-color: white;
-  color: black;
+   background-color: var(--contrast-color); 
+  color: var(--contrast-bg);
+}
+.high-contrast .card{
+  background-color: var(--contrast-bg);
+  border: 1px solid gray;
+}
+
+.high-contrast .govgr-btn-cta{
+  background-color: var(--orange-light);
+  color: var(--contrast-bg);
+}
+.high-contrast .govgr-btn-cta:hover{
+  background-color: var(--orange);
+  color: var(--contrast-bg);
+}
+
+/*high-contrast switch*/
+
+.high-contrast .form-check-input:focus {
+  border-color: var(--orange);
+  box-shadow: 0 0 0 0.2rem rgba(255, 47, 69, 0.25);
+}
+
+.high-contrast .form-check-input:checked {
+  border-color: var(--orange);
+  background-color: var(--orange);
+}
+
+.high-contrast .form-check-input:active {
+  background-color: var(--orange);
+  border-color: var(--orange);
+}
+
+.high-contrast .form-check-input:focus:not(:checked) {
+  border-color: var(--orange);
+}
+
+.high-contrast .form-check-input-green:not(:disabled):active {
+  background-color: var(--orange);
+  border-color: var(--orange);
+}
+
+.high-contrast .govgr-body{
+  color: aliceblue;
 }
 
 nav div {
@@ -25,7 +87,7 @@ nav div {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: var(--contrast-bg);
   pointer-events: none;
   z-index: 9999;
   opacity:0;
@@ -37,22 +99,22 @@ nav div {
   left: 0;
   width: 100%;
   height:0;
-  background-color: black;
+  background-color: var(--contrast-bg);
   pointer-events: none;
   z-index: 9999;
   opacity:0;
 }
 
 .high-contrast {
-  background-color: black;
-  /* color: white; */
+  background-color: var(--contrast-bg);
+  /* color: var(--contrast-color); */
 }
 
 .high-contrast #mask-bottom,.high-contrast #mask-up{
-  background-color: white;
+  background-color: var(--contrast-color);
 }
 
 .high-contrast button {
-  background-color: white;
-  color: black;
+  background-color: var(--contrast-color);
+  color: var(--contrast-bg);
 }
